--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,11 @@
     "forceConsistentCasingInFileNames": true,
     "removeComments": true,
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
+      "./src/types"
     ],
     "sourceMap": false,
-    "baseUrl": "./"
+    "baseUrl": "./",
   },
   "files": [
     "src/Bot.ts"
