--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
     "ffmpeg-static": "^5.1.0",
-    "libsodium-wrappers": "^0.7.10"
+    "libsodium-wrappers": "^0.7.10",
+    "redis": "^4.5.0",
+    "ytdl-core": "^4.11.2"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
